code commit@rahul
work on request for quotation layout

--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -17,15 +17,24 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	
 	
+              
+              
+	
+	<!-- java script -->
+	
+	
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
+	
+	
 	
 	<!-- for treeview  -->
 	
 	 <!-- Bootstrap -->
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <!--  <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Font Awesome -->
-    <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+   <!--  <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
     <!-- NProgress -->
-    <link href="/webjars/nprogress/nprogress.css" rel="stylesheet">
+    <!-- <link href="/webjars/nprogress/nprogress.css" rel="stylesheet"> -->
     
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
@@ -67,13 +76,13 @@
 	<!-- for treeview  -->
 	
 	<!-- jQuery -->
-<script src="/webjars/jquery/jquery.min.js"></script>
-<!-- Bootstrap -->
+<!-- <script src="/webjars/jquery/jquery.min.js"></script>
+Bootstrap
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-<!-- FastClick -->
+FastClick
 <script src="/webjars/fastclick/fastclick.js"></script>
-<!-- NProgress -->
-<script src="/webjars/nprogress/nprogress.js"></script>
+NProgress
+<script src="/webjars/nprogress/nprogress.js"></script> -->
 
 <!-- Custom Theme Scripts -->
 <script src="/js/custom.min.js"></script>
