--- a/src/main/resources/templates/layouts/Master/requestForQuotation.html
+++ b/src/main/resources/templates/layouts/Master/requestForQuotation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
 <html xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{layouts/main-layout :: main-fragment(  
@@ -16,10 +17,8 @@
 
 <th:block id="home-static-resources">
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+	
+	
 
 </th:block>
 
@@ -38,7 +37,7 @@
 
 	<div id="home-main-content">
 
-		<h5>Request for Quotation Master</h5>
+		<h5 style="color: #2e7ef2;">Request for Quotation Master</h5>
 
 
 		<form th:action="@{/requestquotaion/}" method="POST">
@@ -46,20 +45,20 @@
 
 				<div class="row">
 					<div class="form-group col-md-6">
-						<label for="inputEmail4">Request for Quotation Num</label> <input type="text"
-							class="form-control" placeholder="quotation number">
+						<label for="inputEmail4">Request for Quotation Num</label> <input
+							type="text" class="form-control" placeholder="quotation number">
 					</div>
 					<div class="form-group col-md-6">
-						<label for="inputPassword4">Request for Quotation Type</label> <input type="text"
-							class="form-control" placeholder="quotation type">
+						<label for="inputPassword4">Request for Quotation Type</label> <input
+							type="text" class="form-control" placeholder="quotation type">
 					</div>
 
 				</div>
 
 				<div class="row">
 					<div class="form-group col-md-6">
-						<label for="inputEmail4">Request for Quotation Date</label> <input type="text"
-							class="form-control" placeholder="quotation date">
+						<label for="inputEmail4">Request for Quotation Date</label> <input
+							type="text" class="form-control" placeholder="quotation date">
 					</div>
 
 
@@ -77,7 +76,7 @@
 
 			<!-- request for quotation detail -->
 
-<h5>Request for Quotation Detail</h5>
+			<h5 style="color: #2e7ef2;">Request for Quotation Detail</h5>
 			<div class="card form-border">
 				<div class="card-header"></div>
 				<div class="card-body">
@@ -106,22 +105,14 @@
 											Number</th>
 										<th scope="col" class="text-center" style="width: 130px;">Indent
 											Date</th>
-										<th scope="col" class="text-center" style="width: 100px;">Employee
-											Code</th>
-										<th scope="col" class="text-center" style="width: 90px;">Employee
-											Name</th>
-										<th scope="col" class="text-center" style="width: 90px;">Item
-											Code</th>
-										<th scope="col" class="text-center" style="width: 90px;">Description</th>
-										<th scope="col" class="text-center" style="width: 10px;">UOM</th>
-										<th scope="col" class="text-center" style="width: 120px;">Rate</th>
-										<th scope="col" class="text-center" style="width: 90px;">Negotiable
-											Cost</th>
-										<th scope="col" class="text-center" style="width: 90px;">Qty</th>
-										<th scope="col" class="text-center" style="width: 120px;">Total
-											INR Value</th>
-										<th scope="col" class="text-center" style="width: 90px;">Approval
-											Status</th>
+										<th scope="col" class="text-center" style="width: 100px;">Item Name</th>
+										<th scope="col" class="text-center" style="width: 90px;">UOM</th>
+										<th scope="col" class="text-center" style="width: 90px;">City</th>
+										<th scope="col" class="text-center" style="width: 90px;">Required Date</th>
+										<th scope="col" class="text-center" style="width: 10px;">Item Specification</th>
+										<th scope="col" class="text-center" style="width: 120px;">Term and Conditions</th>
+										<th scope="col" class="text-center" style="width: 90px;">Remarks</th>
+										
 
 
 									</tr>
@@ -133,33 +124,25 @@
 										<td><input type="text" style="width: 90px;"
 											id="desigCode0" readonly title="Designation code" required></td>
 
-										<td><select id="designationName0" style="width: 130px;"
-											required onchange="selectDesignation()"
-											title="Designation name">
-												<option value=" ">Select</option>
-
-
-										</select></td>
+										<td><input type="date" style="width: 90px;"
+											 title="indent date" required></td>
 
 
 
 										<td><select id="location" style="width: 100px;"
 											title="Location" required>
-												<option value=" ">Select</option>
+												<option value=" ">Select Item Name</option>
 												<option value="Court">Court</option>
 												<option value="Department">Department</option>
 										</select></td>
 
-										<td><select id="sex" style="width: 90px;" required>
-												<option value=" ">Select</option>
-												<option value="Male">Male</option>
-												<option value="Female">Female</option>
-										</select></td>
+										<td><input type="text" style="width: 90px;"
+											id="ageFrom" title="uom" required></td>
 
-										<td><input type="number" style="width: 90px;"
-											id="ageFrom" min="18" title="Age from" required></td>
+										<td><input type="text" style="width: 90px;"
+											id="ageFrom"  title="Age from" required></td>
 
-										<td><input type="number" max="45" style="width: 90px;"
+										<td><input type="date" max="45" style="width: 90px;"
 											id="ageTo" required></td>
 
 										<td><input type="text" style="width: 120px;"
@@ -170,21 +153,10 @@
 											id="technicalQualification" required
 											title="Technical Qualification"></td>
 
-										<td><input type="number" style="width: 90px;"
+										<td><input type="text" style="width: 90px;"
 											id="expMinMonth" required title="minimum experience"></td>
 
-										<td><input type="number" style="width: 90px;"
-											id="expMaxMonth" required title="max experience"></td>
-
-										<td><select id="vacancyType" style="width: 120px;"
-											required>
-												<option value=" ">Select</option>
-												<option value="Fresher">Fresher</option>
-												<option value="Experience">Experience</option>
-										</select></td>
-
-										<td><input type="number" style="width: 90px;"
-											id="totalvacancy" required title="Total vacancy"></td>
+										
 
 
 									</tr>
@@ -203,12 +175,16 @@
 
 
 			<!-- end request for quotationdetail -->
+
+
+			<div style="height: 10px"></div>
+			<div>
+ <button type="button" onclick="fun">click</button>
+</div>
 			
-			
-			<div style="height:10px"></div>
-		<h5>Supplier Information</h5>	
+			<h5 style="color: #2e7ef2;">Supplier Information</h5>
 			<!-- supplier information detail -->
-			
+
 			<div class="card form-border">
 				<div class="card-header"></div>
 				<div class="card-body">
@@ -330,7 +306,7 @@
 				</div>
 
 			</div>
-			
+
 			<!-- end supplier information detail -->
 		</form>
 
@@ -343,15 +319,93 @@
 
 
 
+<script>
+
+
+$( document ).ready(function() {
+
+	alert("testing..")
+    console.log( "ready!" );
+});
+
+
+
+function fun(){
+
+alert("testing")
+console.log("testing java script")
+}
+</script>
 
 
 
 
 
 
-	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
-        Footer
-    </div> -->
+	<script>
+		//add row 
+
+idIndex=0;
+		$(document)
+				.ready(
+						function() {
+							console.log("click function...");
+							var i = 1;
+
+							console.log("idINdexin add buttton function"
+									+ idIndex);
+							$("#add_row")
+									.click(
+											function() {
+												idIndex++;
+												$('#addr' + i)
+														.html(
+																"<td><input type='text' style='width: 90px;'id='desigCode"+idIndex+"'name='employeRequisitionDetail["+i+"].designation.desgCode' required></td>"
+																		+
+
+																		"<td><select style='width: 130px;' id='designationName"
+																		+ idIndex
+																		+ "'name='employeRequisitionDetail["
+																		+ i
+																		+ "].designation.desgName'onchange='selectDesignation()' required><option value=''>Select</option></select></td>"
+																		+ "<td><select id='location'name='employeRequisitionDetail["+i+"].location' required><option value=''>Select</option><option value='Court'>Court</option><option value='Department'>Department</option></select></td>"
+																		+ "<td><select style='width: 90px;' id='sex'name='employeRequisitionDetail["+i+"].sex' required><option value=''>Select</option><option value='Male'>Male</option><option value='Female'>Female</option></select></td>"
+																		+ "<td><input type='text' style='width: 90px;'id='ageFrom'name='employeRequisitionDetail["+i+"].ageFrom' required></td>"
+																		+ " </td><td><input type='text' style='width: 90px;'id='desigCode'name='employeRequisitionDetail["+i+"].ageTo' required></td>"
+																		+
+
+																		"<td><input type='text' style='width: 120px;'id='acadQuali'name='employeRequisitionDetail["+i+"].acadQuali' required></td>"
+																		+ "<td><input type='text' style='width: 120px;'id='techQuali'name='employeRequisitionDetail["+i+"].techQuali' required></td>"
+																		+ "<td><input type='text' style='width: 90px;'id='minExperience'name='employeRequisitionDetail["+i+"].minExperience' required></td>"
+																		+ "<td><input type='text' style='width: 90px;'id='maxExpierence'name='employeRequisitionDetail["+i+"].maxExperience' required></td>"
+																		+ "<td><select style='width: 120px;id='vacanncyType' name='employeRequisitionDetail["+i+"].vacanncyType' required><option value=''>Select</option><option value='Fresher'>Fresher</option><option value='Experience'>Experience</option></select></td>"
+																		+ "<td><input type='text' style='width: 90px;'id='totalVacancy'name='employeRequisitionDetail["+i+"].totalvacancy' required></td>"
+																		+ "<td><input type='text' style='width: 120px;'id='salaryFrom'name='employeRequisitionDetail["+i+"].salaryFrom' required></td>"
+																		+ "<td><input type='text' style='width: 120px;'id='salaryTo'name='employeRequisitionDetail["+i+"].salaryTo' required></td>"
+																		+ "<td><input type='text' style='width: 120px;'id='remarks'name='employeRequisitionDetail["+i+"].remarks' required></td>");
+
+												$('#example').append(
+														'<tr id="addr'
+																+ (i + 1)
+																+ '"></tr>');
+												$('#_cr').val(i + 1);
+												i++;
+
+												changeDepartment();
+
+											});
+
+							$("#delete_row").click(function() {
+								if (i > 1) {
+									$("#addr" + (i - 1)).html('');
+									$('#_cr').val(i - 1);
+									i--;
+									idIndex--;
+								}
+							});
+
+						});
+	</script>
 
 
 </body>
