--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -15,7 +15,7 @@
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	
+<script  src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>	
 	
               
               
@@ -85,7 +85,11 @@ NProgress
 <script src="/webjars/nprogress/nprogress.js"></script> -->
 
 <!-- Custom Theme Scripts -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 <script src="/js/custom.min.js"></script>
+<script src="/js/custom.js"></script>
+<script src="/js/app.js"></script>
+<script src="/js/settings.js"></script> -->
 
 	<!-- end trreeview -->
 
