--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -24,11 +24,12 @@
 </head>
 <body>
  
-    <div id="home-header">
+    <div id="home-header" th:replace="~{fragments/app-fragments :: header-default}">
         
-        Header of Home Page
+        eBs
         
     </div>
+     
      
     <div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">
         Home Nav
