--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -18,6 +18,9 @@
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script  src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>	
+
+
+<script type="text/javascript" th:src="@{/js/myjs.js}"></script>
 	
               
               
