--- a/src/main/resources/templates/fragments/app-fragments.html
+++ b/src/main/resources/templates/fragments/app-fragments.html
@@ -21,100 +21,6 @@
 
 <!-- header bar -->
 
-<div class="top_nav" th:fragment="header-default">
-    <div class="nav_menu">
-        <nav>
-            <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-            </div>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                    <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="/images/img.jpg" alt="">CrunchDroid
-                        <span class=" fa fa-angle-down"></span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-usermenu pull-right">
-                        <li><a href="javascript:;"> Profile</a></li>
-                        <li>
-                            <a href="javascript:;">
-                                <span class="badge bg-red pull-right">50%</span>
-                                <span>Settings</span>
-                            </a>
-                        </li>
-                        <li><a href="javascript:;">Help</a></li>
-                        <li><a href="#login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                    </ul>
-                </li>
-
-                <li role="presentation" class="dropdown">
-                    <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
-                        <i class="fa fa-envelope-o"></i>
-                        <span class="badge bg-green">6</span>
-                    </a>
-                    <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                        <li>
-                            <a>
-                                <span class="image"><img src="/images/img.jpg" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/images/img.jpg" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/images/img.jpg" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a>
-                                <span class="image"><img src="/images/img.jpg" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="text-center">
-                                <a>
-                                    <strong>See All Alerts</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</div>
 
 <!-- end header bar -->
 
@@ -157,12 +63,14 @@
             </li>
             <li><a><i class="fa fa-edit"></i> Purchase <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <!-- <li><a href="#form.html">General Form</a></li>
-                    <li><a href="#form_advanced.html">Advanced Components</a></li>
-                    <li><a href="#form_validation.html">Form Validation</a></li>
-                    <li><a href="#form_wizards.html">Form Wizard</a></li>
-                    <li><a href="#form_upload.html">Form Upload</a></li>
-                    <li><a href="#form_buttons.html">Form Buttons</a></li> -->
+                   <li><a th:href="@{/openindent/}">Open Indent</a></li>
+                    <li><a th:href="@{/openindent/approve}">Indent Approval</a></li>
+                    <li><a th:href="@{/requestquotation/}">Request For Quotation</a></li>
+                    <li><a th:href="@{/quotationdetail/}">Quotation Detail</a></li>
+                    <li><a th:href="@{/quotationapproval/}">Quotation Comparitive And Approval</a></li>
+                    <li><a th:href="@{/openindent}">Purchase Order</a></li>
+                     <li><a th:href="@{/openindent}">Purchase Order Approval</a></li>
+                    <li><a th:href="@{/openindent}">Po Schedule</a></li>
                 </ul>
             </li>
            <!--  <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
