--- a/src/main/resources/templates/layouts/index.html
+++ b/src/main/resources/templates/layouts/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
  
-    <div id="home-header" th:replace="~{fragments/app-fragments :: header-default}">
+    <div id="home-header">
         
         eBs
         
@@ -36,8 +36,10 @@
     </div>
  
     <div id="home-main-content">
-        <h2>Home content</h2>
-        <div>Content of Home Page</div>
+        
+        
+        
+        
     </div>
      
      
