--- a/src/main/resources/templates/layouts/editview/editUom.html
+++ b/src/main/resources/templates/layouts/editview/editUom.html
@@ -38,7 +38,7 @@
 
 		<div id="home-main-content">
 
-			<h3>UOM Master</h3>
+			<h3> Edit UOM Master</h3>
 
 
 			<form th:action="@{/uom/}" method="POST" th:object="${uom}">
