code commit@rahul
work on master form

--- a/src/main/resources/templates/layouts/Master/financialactiveyear.html
+++ b/src/main/resources/templates/layouts/Master/financialactiveyear.html
@@ -39,7 +39,7 @@
 		<h3>Financial Year</h3>
 
 
-		<form th:action="@{/financialyear/}" method="POST" th:object="${financialYear}">
+		<form th:action="@{/financialactiveyear/}" method="POST" th:object="${financialActiveYear}">
 			<div class="form-border">
 
 				<div class="row">
@@ -96,7 +96,7 @@
 		</form>
 
 		<div class="row text-right m-10">
-			<a th:href="@{/financialyear/list}">view financial year list</a>
+			<a th:href="@{/financialactiveyear/list}">view financial year list</a>
 		</div>
 	</div>
    
