--- a/src/main/resources/templates/layouts/Master/requestForQuotation.html
+++ b/src/main/resources/templates/layouts/Master/requestForQuotation.html
@@ -13,12 +13,16 @@
                                                )}">
 
 <head>
+
+
+
+
 <title>Title of Home Page</title>
 
 <th:block id="home-static-resources">
 
-	
-	
+
+
 
 </th:block>
 
@@ -105,14 +109,18 @@
 											Number</th>
 										<th scope="col" class="text-center" style="width: 130px;">Indent
 											Date</th>
-										<th scope="col" class="text-center" style="width: 100px;">Item Name</th>
+										<th scope="col" class="text-center" style="width: 100px;">Item
+											Name</th>
 										<th scope="col" class="text-center" style="width: 90px;">UOM</th>
 										<th scope="col" class="text-center" style="width: 90px;">City</th>
-										<th scope="col" class="text-center" style="width: 90px;">Required Date</th>
-										<th scope="col" class="text-center" style="width: 10px;">Item Specification</th>
-										<th scope="col" class="text-center" style="width: 120px;">Term and Conditions</th>
+										<th scope="col" class="text-center" style="width: 90px;">Required
+											Date</th>
+										<th scope="col" class="text-center" style="width: 10px;">Item
+											Specification</th>
+										<th scope="col" class="text-center" style="width: 120px;">Term
+											and Conditions</th>
 										<th scope="col" class="text-center" style="width: 90px;">Remarks</th>
-										
+
 
 
 									</tr>
@@ -125,7 +133,7 @@
 											id="desigCode0" readonly title="Designation code" required></td>
 
 										<td><input type="date" style="width: 90px;"
-											 title="indent date" required></td>
+											title="indent date" required></td>
 
 
 
@@ -136,11 +144,11 @@
 												<option value="Department">Department</option>
 										</select></td>
 
-										<td><input type="text" style="width: 90px;"
-											id="ageFrom" title="uom" required></td>
+										<td><input type="text" style="width: 90px;" id="ageFrom"
+											title="uom" required></td>
 
-										<td><input type="text" style="width: 90px;"
-											id="ageFrom"  title="Age from" required></td>
+										<td><input type="text" style="width: 90px;" id="ageFrom"
+											title="Age from" required></td>
 
 										<td><input type="date" max="45" style="width: 90px;"
 											id="ageTo" required></td>
@@ -156,7 +164,7 @@
 										<td><input type="text" style="width: 90px;"
 											id="expMinMonth" required title="minimum experience"></td>
 
-										
+
 
 
 									</tr>
@@ -178,9 +186,9 @@
 
 
 			<div style="height: 10px"></div>
-		
-		
-			
+
+
+
 			<h5 style="color: #2e7ef2;">Supplier Information</h5>
 			<!-- supplier information detail -->
 
@@ -311,7 +319,7 @@
 
 
 
-<button onclick="fun()"> click me </button>
+		<button id="button" onclick="fun()">click me</button>
 		<div class="row text-right m-10">
 			<a th:href="@{/requestquotation/list}">view state list</a>
 		</div>
@@ -329,84 +337,23 @@
 
 
 	<script>
-		//add row 
+		$(function(){
+    		console.log( "ready!" );
+		});
 
-idIndex=0;
-		$(document)
-				.ready(
-						function() {
-							console.log("click function...");
-							var i = 1;
 
-							console.log("idINdexin add buttton function"
-									+ idIndex);
-							$("#add_row")
-									.click(
-											function() {
-												idIndex++;
-												$('#addr' + i)
-														.html(
-																"<td><input type='text' style='width: 90px;'id='desigCode"+idIndex+"'name='employeRequisitionDetail["+i+"].designation.desgCode' required></td>"
-																		+
 
-																		"<td><select style='width: 130px;' id='designationName"
-																		+ idIndex
-																		+ "'name='employeRequisitionDetail["
-																		+ i
-																		+ "].designation.desgName'onchange='selectDesignation()' required><option value=''>Select</option></select></td>"
-																		+ "<td><select id='location'name='employeRequisitionDetail["+i+"].location' required><option value=''>Select</option><option value='Court'>Court</option><option value='Department'>Department</option></select></td>"
-																		+ "<td><select style='width: 90px;' id='sex'name='employeRequisitionDetail["+i+"].sex' required><option value=''>Select</option><option value='Male'>Male</option><option value='Female'>Female</option></select></td>"
-																		+ "<td><input type='text' style='width: 90px;'id='ageFrom'name='employeRequisitionDetail["+i+"].ageFrom' required></td>"
-																		+ " </td><td><input type='text' style='width: 90px;'id='desigCode'name='employeRequisitionDetail["+i+"].ageTo' required></td>"
-																		+
+function fun(){
 
-																		"<td><input type='text' style='width: 120px;'id='acadQuali'name='employeRequisitionDetail["+i+"].acadQuali' required></td>"
-																		+ "<td><input type='text' style='width: 120px;'id='techQuali'name='employeRequisitionDetail["+i+"].techQuali' required></td>"
-																		+ "<td><input type='text' style='width: 90px;'id='minExperience'name='employeRequisitionDetail["+i+"].minExperience' required></td>"
-																		+ "<td><input type='text' style='width: 90px;'id='maxExpierence'name='employeRequisitionDetail["+i+"].maxExperience' required></td>"
-																		+ "<td><select style='width: 120px;id='vacanncyType' name='employeRequisitionDetail["+i+"].vacanncyType' required><option value=''>Select</option><option value='Fresher'>Fresher</option><option value='Experience'>Experience</option></select></td>"
-																		+ "<td><input type='text' style='width: 90px;'id='totalVacancy'name='employeRequisitionDetail["+i+"].totalvacancy' required></td>"
-																		+ "<td><input type='text' style='width: 120px;'id='salaryFrom'name='employeRequisitionDetail["+i+"].salaryFrom' required></td>"
-																		+ "<td><input type='text' style='width: 120px;'id='salaryTo'name='employeRequisitionDetail["+i+"].salaryTo' required></td>"
-																		+ "<td><input type='text' style='width: 120px;'id='remarks'name='employeRequisitionDetail["+i+"].remarks' required></td>");
+	console.log("my function running...")
+}
 
-												$('#example').append(
-														'<tr id="addr'
-																+ (i + 1)
-																+ '"></tr>');
-												$('#_cr').val(i + 1);
-												i++;
 
-												changeDepartment();
-
-											});
-
-							$("#delete_row").click(function() {
-								if (i > 1) {
-									$("#addr" + (i - 1)).html('');
-									$('#_cr').val(i - 1);
-									i--;
-									idIndex--;
-								}
-							});
-
-						});
 	</script>
+
 
 
 </body>
 
-<script>
 
-
-
-
-
-
-
-function fun() {
-  alert("hello")
-}
-
-</script>
 </html>
