--- a/src/main/resources/templates/layouts/main-layout.html
+++ b/src/main/resources/templates/layouts/main-layout.html
@@ -6,48 +6,45 @@
 <title th:replace="${title}">Page 1 Title</title>
 
 
-<link rel="stylesheet" type="text/css" th:href="@{/main.css}"
-	href="../../static/main.css" />
+<link rel="stylesheet" type="text/css" th:href="@{/main.css}" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script type="text/javascript"
+	th:src="@{http://code.jquery.com/jquery-latest.js}"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+
 
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	
-	
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<script  src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>	
 
 
-<script type="text/javascript" th:src="@{/js/myjs.js}"></script>
-	
-              
-              
-	
-	<!-- java script -->
-	
-	
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
-	
-	
-	
-	<!-- for treeview  -->
-	
-	 <!-- Bootstrap -->
-   <!--  <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- Font Awesome -->
-   <!--  <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
-    <!-- NProgress -->
-    <!-- <link href="/webjars/nprogress/nprogress.css" rel="stylesheet"> -->
-    
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" />
-    
 
-  
-    
-	<!-- end treeview -->
+<script src="https://www.googletagmanager.com/gtag/js?id=UA-120946860-7"></script>
+
+<script type="text/javascript" th:src="@{/JS/myjs.js}"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" /> -->
+
+
+
+
+<!-- end treeview -->
 
 <!-- Other javascript, css source files -->
 <th:block th:replace="${otherStaticResources} ?: ~{}"></th:block>
@@ -59,8 +56,8 @@
 		<h2>Page 1</h2>
 	</header>
 
-	
-	<section >
+
+	<section>
 		<nav th:insert="${nav} ?: ~{}">
 			<ul>
 				<li><a href="#">Page 1</a></li>
@@ -77,8 +74,8 @@
 	<!-- <footer th:insert="${footer} ?: ~{}">
 		<p>Footer</p>
 	</footer> -->
-	
-	
+
+
 
 
 
