code commit@rahul
financial Active year functionalty

--- a/src/main/resources/templates/layouts/editview/editFinancialyear.html
+++ b/src/main/resources/templates/layouts/editview/editFinancialyear.html
@@ -44,6 +44,8 @@
 
 				<div class="row">
 					<div class="form-group col-md-6">
+					
+						<input type="hidden" th:field="*{id}"/>
 						<label for="inputEmail4">Financial Year Code</label> <input type="text"
 							class="form-control" placeholder="financial year code" th:field="*{financialYearCode}"
 							>
