--- a/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
+++ b/src/main/resources/templates/layouts/listview/listofFinancialActiveyear.html
@@ -70,7 +70,7 @@
 											</tr>
 										</thead>
 										<tbody>
-											<tr th:each="financialyear,iter  : ${financialYearList}">
+											<tr th:each="financialyear,iter  : ${financialActiveYearList}">
 												<td th:text="${iter.index}">1</td>
 												<td th:text="${financialyear.financialYearCode}">Garrett Winters</td>
 												<td th:text="${financialyear.fromDate}">Garrett Winters</td>
