--- a/src/main/resources/templates/fragments/app-fragments.html
+++ b/src/main/resources/templates/fragments/app-fragments.html
@@ -1,28 +1,29 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8" />
-<title>App Fragments</title>
+	<meta charset="UTF-8" />
+	<title>App Fragments</title>
 </head>
 
- <!-- Bootstrap -->
-    <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="/webjars/nprogress/nprogress.css" rel="stylesheet">
+<!-- Bootstrap -->
+<link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- Font Awesome -->
+<link href="/webjars/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+<!-- NProgress -->
+<link href="/webjars/nprogress/nprogress.css" rel="stylesheet">
 
-   
-    
-    
+
+
+
 <body>
 
 
 
-<!-- header bar -->
+	<!-- header bar -->
 
 
-<!-- end header bar -->
+	<!-- end header bar -->
 
 	<!-- Default Navigator -->
 
@@ -35,45 +36,57 @@
 
 	<!-- experment side barr -->
 
-<br>
+	<br>
 
 	<div id="sidebar-menu" class="main_menu_side hidden-print main_menu" th:fragment="nav-default">
-    <div class="menu_section">
-        <h3>General</h3>
-        <ul class="nav side-menu">
-            <li><a><i class="fa fa-home"></i> Admin <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                    <li><a th:href="@{/companydetail}">Company Detail</a></li>
-                    
-                    
-                    <li><a th:href="@{/city/}">City</a></li>
-                    <li><a th:href="@{/country/}">Country</a></li>
-                    <li><a th:href="@{/state/}">State</a></li>
-                    
-                    <li><a th:href="@{/module/}">Module</a></li>
-                    <li><a th:href="@{/sub-module/}">Sub-Module</a></li>
-                    <li><a th:href="@{/program/}">Program</a></li>
-                    
-                    
-                    <li><a th:href="@{/financialyear}">Financial Year</a></li>
-                    <li><a th:href="@{/financialactiveyear}">Active Financial Year</a></li>
-                    
-                    
-                </ul>
-            </li>
-            <li><a><i class="fa fa-edit"></i> Purchase <span class="fa fa-chevron-down"></span></a>
-                <ul class="nav child_menu">
-                   <li><a th:href="@{/openindent/}">Open Indent</a></li>
-                    <li><a th:href="@{/openindent/approve}">Indent Approval</a></li>
-                    <li><a th:href="@{/requestquotation/}">Request For Quotation</a></li>
-                    <li><a th:href="@{/quotationdetail/}">Quotation Detail</a></li>
-                    <li><a th:href="@{/quotationapproval/}">Quotation Comparitive And Approval</a></li>
-                    <li><a th:href="@{/openindent}">Purchase Order</a></li>
-                     <li><a th:href="@{/openindent}">Purchase Order Approval</a></li>
-                    <li><a th:href="@{/openindent}">Po Schedule</a></li>
-                </ul>
-            </li>
-           <!--  <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+		<div class="menu_section">
+		
+		
+			<!--<h3>General</h3>-->
+			
+			<div>
+				<img src="/img/contact.png" alt=""  style="width:80px;height:80px; border-radius:50%;"/>
+			</div>
+			
+			
+			<ul class="nav side-menu">
+				<li><a><i class="fa fa-home"></i> Admin <span class="fa fa-chevron-down"></span></a>
+					<ul class="nav child_menu">
+						<li><a th:href="@{/companydetail}">Company Detail</a></li>
+
+
+						<li><a th:href="@{/city/}">City</a></li>
+						<li><a th:href="@{/country/}">Country</a></li>
+						<li><a th:href="@{/state/}">State</a></li>
+
+						<li><a th:href="@{/module/}">Module</a></li>
+						<li><a th:href="@{/sub-module/}">Sub-Module</a></li>
+						<li><a th:href="@{/program/}">Program</a></li>
+
+
+						<li><a th:href="@{/financialyear/}">Financial Year</a></li>
+						<li><a th:href="@{/financialactiveyear/}">Active Financial Year</a></li>
+
+						<li><a th:href="@{/store/}">Store</a></li>
+
+						<li><a th:href="@{/servicecategory/}">Service Category</a></li>
+
+
+					</ul>
+				</li>
+				<li><a><i class="fa fa-edit"></i> Purchase <span class="fa fa-chevron-down"></span></a>
+					<ul class="nav child_menu">
+						<li><a th:href="@{/openindent/}">Open Indent</a></li>
+						<li><a th:href="@{/openindent/approve}">Indent Approval</a></li>
+						<li><a th:href="@{/requestquotation/}">Request For Quotation</a></li>
+						<li><a th:href="@{/quotationdetail/}">Quotation Detail</a></li>
+						<li><a th:href="@{/quotationapproval/}">Quotation Comparitive And Approval</a></li>
+						<li><a th:href="@{/openindent}">Purchase Order</a></li>
+						<li><a th:href="@{/openindent}">Purchase Order Approval</a></li>
+						<li><a th:href="@{/openindent}">Po Schedule</a></li>
+					</ul>
+				</li>
+				<!--  <li><a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="#general_elements.html">General Elements</a></li>
                     <li><a href="#media_gallery.html">Media Gallery</a></li>
@@ -86,13 +99,13 @@
                     <li><a href="#calendar.html">Calendar</a></li>
                 </ul>
             </li> -->
-            <!-- <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+				<!-- <li><a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="#tables.html">Tables</a></li>
                     <li><a href="#tables_dynamic.html">Table Dynamic</a></li>
                 </ul>
             </li> -->
-            <!-- <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+				<!-- <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="#chartjs.html">Chart JS</a></li>
                     <li><a href="#chartjs2.html">Chart JS2</a></li>
@@ -101,17 +114,18 @@
                     <li><a href="#other_charts.html">Other Charts</a></li>
                 </ul>
             </li> -->
-            <!-- <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
+				<!-- <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href="#fixed_sidebar.html">Fixed Sidebar</a></li>
                     <li><a href="#fixed_footer.html">Fixed Footer</a></li>
                 </ul>
             </li>
- -->        </ul>
-    </div>
-    
+ -->
+			</ul>
+		</div>
 
-</div>
+
+	</div>
 
 
 
@@ -136,7 +150,7 @@
 
 
 
-<!-- <!-- jQuery
+	<!-- <!-- jQuery
 <script src="/webjars/jquery/jquery.min.js"></script>
 Bootstrap
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -145,9 +159,10 @@ FastClick
 NProgress
 <script src="/webjars/nprogress/nprogress.js"></script>
  -->
-<!--Custom Theme Scripts -->
-<script src="/js/custom.min.js"></script>
+	<!--Custom Theme Scripts -->
+	<script src="/js/custom.min.js"></script>
 
 
 </body>
+
 </html>
