--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 
 <!--  main-fragment (title, otherStaticResources, header, nav, mainContent, footer)  -->
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{layouts/main-layout :: main-fragment(  
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/main-layout :: main-fragment(  
                                                 ~{::title},
                                                 ~{:: #home-static-resources},
                                                 ~{:: #home-header},
@@ -12,77 +11,115 @@
                                                )}">
 
 <head>
-<title>Title of Home Page</title>
+	<title>Title of Home Page</title>
 
-<th:block id="home-static-resources">
+	<th:block id="home-static-resources">
 
-	<script type="text/javascript" src="../static/home.js"
-		th:src="@{/home.js}"></script>
-	<link rel="stylesheet" type="text/css" href="../static/home.css"
-		th:href="@{/home.css}" />
+		<script type="text/javascript" src="../static/home.js" th:src="@{/home.js}"></script>
+		<link rel="stylesheet" type="text/css" href="../static/home.css" th:href="@{/home.css}" />
 
-</th:block>
+	</th:block>
 
 </head>
+
 <body>
 
-	<div id="home-header">ERP WhareHouse</div>
+	<div id="home-header">
 
-	<div id="home-nav"
-		th:replace="~{fragments/app-fragments :: nav-default}">Home Nav
+		eBs
+
 	</div>
 
-
-	
-
+	<div id="home-nav" th:replace="~{fragments/app-fragments :: nav-default}">
+		Home Nav
+	</div>
 
 	<div id="home-main-content">
 
-<h3>Category Master</h3>
+		<h3>Category Master</h3>
 
-		
-		<div class="form form-border">
-				
-				<div class="form-group col-md-6">
-					<label for="inputEmail4">Category Code</label> <input type="email"
-						class="form-control" id="inputEmail4" placeholder="category code">
+
+		<form th:action="@{/category/}" method="POST" th:object="${category}">
+			<div class="form-border">
+
+				<div class="row">
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Category Code</label> <input type="text" class="form-control"
+							placeholder="store code" th:field="*{categCode}">
+					</div>
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
+							placeholder="location" >
+					</div>
 				</div>
-				<div class="form-group col-md-6">
-					<label for="inputPassword4">Description</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="discreption">
+
+				<div class="row">
+					<div class="form-group col-md-6">
+						<label class="form-label">Acount Head</label> <label style="color: red">*</label> <select
+							class="form-control" id="" title="type" th:field="*{accountHead}" required>
+							<option value="">Select</option>
+							<option value="t-1">type-1</option>
+							<option value="t-2">type-2</option>
+						</select>
+					</div>
+
+
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
+							placeholder="description" th:field="*{description}">
+					</div>
+
+
+
 				</div>
-				<div class="form-group col-md-6">
-					<label for="inputPassword4">Account Head Code</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="account head code">
+
+
+				<div class="row">
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Parent Code</label> <input type="text" class="form-control"
+							placeholder="parent code" th:field="*{parentCode}">
+					</div>
+
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Parent Name</label> <input type="text" class="form-control"
+							placeholder="parent name" th:field="*{parentName}">
+					</div>
+
 				</div>
-				<div class="form-group col-md-6">
-					<label for="inputEmail4">Account Head Name</label> <input type="email"
-						class="form-control" id="inputEmail4" placeholder="account head name">
+
+
+
+				<!-- <div class="form-group" style="margin: 10px;">
+
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="radio"
+							name="inlineRadioOptions" id="inlineRadio1" value="Y"> <label
+							class="form-check-label" for="inlineRadio1"
+							th:field="*{activeYn}">Active</label>
+					</div>
+
+					<div class="form-check form-check-inline">
+						<input class="form-check-input" type="radio"
+							name="inlineRadioOptions" id="inlineRadio1" value="N"> <label
+							class="form-check-label" for="inlineRadio1"
+							th:field="*{activeYn}">In-Active</label>
+					</div>
+
 				</div>
-				<div class="form-group col-md-6">
-					<label for="inputPassword4">Parent Code</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="parent code">
-				</div>
-				<div class="form-group col-md-6">
-					<label for="inputPassword4">Parent Name</label> <input
-						type="password" class="form-control" id="inputPassword4"
-						placeholder="parent name">
+ -->
+				<div class="row" style="margin: 10px">
+					<input type="submit" value="Submit" class="btn btn-primary" />
+					<input type="reset" value="Reset" class="btn btn-danger" />
 				</div>
 
 			</div>
+		</form>
+
+		<div class="row text-right m-10">
+			<a th:href="@{/category/list}">view store list</a>
 		</div>
-
-			
-
-
-		
-
-
-
 	</div>
+
 
 
 	<!-- <div id="home-footer" th:replace="~{/fragments/app-fragments :: copyright}">
@@ -91,4 +128,5 @@
 
 
 </body>
+
 </html>
