--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -26,7 +26,7 @@
 
 	<div id="home-header">
 
-		Header of Home Page
+		eBs
 
 	</div>
 
@@ -36,55 +36,54 @@
 
 	<div id="home-main-content">
 
-		<h3>Store Master</h3>
+		<h3>Category Master</h3>
 
 
-		<form th:action="@{/store/}" method="POST"  th:object="${store}">
+		<form th:action="@{/category/}" method="POST" th:object="${category}">
 			<div class="form-border">
 
 				<div class="row">
 					<div class="form-group col-md-6">
-						<label for="inputEmail4">Store Code</label> <input type="text" class="form-control"
-							placeholder="store code" th:field="*{storeCode}">
+						<label for="inputEmail4">Category Code</label> <input type="text" class="form-control"
+							placeholder="store code" th:field="*{categCode}">
 					</div>
 					<div class="form-group col-md-6">
-						<label class="form-label">Status</label> <label style="color: red">*</label> <select
-							class="form-control" id="" title="status" th:field="*{storeStatus}" required>
-							<option value="">Select</option>
-							
-							<option value="Normal">Normal</option>
-							<option value="Ondate">As On Date</option>
-						</select>
+						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
+							placeholder="location">
 					</div>
-
 				</div>
 
 				<div class="row">
 					<div class="form-group col-md-6">
-						<label class="form-label">Type</label> <label style="color: red">*</label> <select
-							class="form-control" id="" title="type" th:field="*{storeType}" required>
-							<option value="">Select</option>	
+						<label class="form-label">Acount Head</label> <label style="color: red">*</label> <select
+							class="form-control" id="" title="type" th:field="*{accountHead}" required>
+							<option value="">Select</option>
 							<option value="t-1">type-1</option>
 							<option value="t-2">type-2</option>
 						</select>
 					</div>
 
-					<div class="form-group col-md-6">
-						<label for="inputEmail4">Location</label> <input type="text" class="form-control"
-							placeholder="location" th:field="*{location}">
-					</div>
 
-
-				</div>
-
-
-				<div class="row">
 					<div class="form-group col-md-6">
 						<label for="inputEmail4">Description</label> <input type="text" class="form-control"
 							placeholder="description" th:field="*{description}">
 					</div>
 
 
+
+				</div>
+
+
+				<div class="row">
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Parent Code</label> <input type="text" class="form-control"
+							placeholder="parent code" th:field="*{parentCode}">
+					</div>
+
+					<div class="form-group col-md-6">
+						<label for="inputEmail4">Parent Name</label> <input type="text" class="form-control"
+							placeholder="parent name" th:field="*{parentName}">
+					</div>
 
 				</div>
 
@@ -117,7 +116,7 @@
 		</form>
 
 		<div class="row text-right m-10">
-			<a th:href="@{/store/list}">view store list</a>
+			<a th:href="@{/category/list}">view store list</a>
 		</div>
 	</div>
 
