code commit@Rahul
add uom , store and category lov in item master

--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -101,7 +101,7 @@
 			</form>
 
 			<div class="row text-right m-10">
-				<a th:href="@{/uom/list}">view state list</a>
+				<a th:href="@{/uom/list}">view uom list</a>
 			</div>
 		</div>
 	</div>
