--- a/src/main/resources/templates/layouts/listview/listofitem.html
+++ b/src/main/resources/templates/layouts/listview/listofitem.html
@@ -77,9 +77,9 @@
 												<td th:text="${iter.index}">1</td>
 												<td th:text="${item.itemCode}">Garrett Winters</td>
 												<td th:text="${item.itemName}">Garrett Winters</td>
-												<td th:text="${item.category}">Garrett Winters</td>
-												<td th:text="${item.storeCode}">Garrett Winters</td>
-												<td th:text="${item.uomCode}">Garrett Winters</td>
+												<td th:text="${item.category.categCode}">Garrett Winters</td>
+												<td th:text="${item.store.storeCode}">Garrett Winters</td>
+												<td th:text="${item.uom.uomCode}">Garrett Winters</td>
 												<td th:text="${item.ccode}">Garrett Winters</td>
 												<td th:text="${item.productGroup}">Good Guys</td>
 
