--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -116,7 +116,7 @@
 		</form>
 
 		<div class="row text-right m-10">
-			<a th:href="@{/category/list}">view store list</a>
+			<a th:href="@{/category/list}">view category list</a>
 		</div>
 	</div>
 
