code commit@Rahul
working on open indent

--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -327,7 +327,10 @@
     </div> -->
 
 
-
+<script>
+	let txt = $("#editDistName option:selected").text();
+	$("#employeename").val(data.empName);
+</script>
 
 
 
