--- a/src/main/resources/templates/layouts/listview/listofdepartment.html
+++ b/src/main/resources/templates/layouts/listview/listofdepartment.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div id="home-main-content">
-		<h3>OPen Indent List</h3>
+		<h3>Department List</h3>
 
 
 
@@ -57,7 +57,7 @@
 										</div>
 									</div>
 								</div>
-								<h5 class="card-title mb-0">Clients</h5>
+								
 							</div>
 							<div class="card-body">
 								<div class="table-responsive-sm">
@@ -65,38 +65,26 @@
 										<thead>
 											<tr>
 												<th scope="col">#</th>
-												<th scope="col">Indent Number</th>
-												<th scope="col">Indent Date</th>
-												<th scope="col">Employee Name</th>
+												<th scope="col">Department Code</th>
 												<th scope="col">Department Name</th>
-												<th scope="col">Urgency</th>
-												<th scope="col">Indent Type</th>
-												<th scope="col">Purchase Type</th>
-												<th scope="col">Approval Status</th>
-												<th scope="col">Date of Approval</th>
-												<th scope="col">Purchase Status</th>
-												<th scope="col">Action</th>
+												<th scope="col">Company</th>
+												<th scope="col">Department Head</th>
+												<th scope="col">Department Sr Code</th>
+												
 											</tr>
 										</thead>
 										<tbody>
-											<tr th:each="indent,iter  : ${openIndentList}">
+											<tr th:each="department,iter  : ${departmentList}">
 												<td th:text="${iter.index}">1</td>
-												<td th:text="${indent.indentNumber}">Garrett Winters</td>
-												<td th:text="${indent.indentDate}">Garrett Winters</td>
-												<td th:text="${indent.employee.empName}">Garrett Winters</td>
-												<td th:text="${indent.employee.department.deptName}">Garrett Winters</td>
-												<td th:text="${indent.urgency}">Garrett Winters</td>
-													<td th:text="${indent.indentType}">Good Guys</td>
-												<td>Purchase Type</td>	
-												<td th:text="${indent.approvalStatus1}">Garrett Winters</td>
-												<td th:text="${indent.approvalDate1}">Good Guys</td>
-												<td>Good Guys</td>
+												<td th:text="${department.deptCode}">Garrett Winters</td>
+												<td th:text="${department.deptName}">Garrett Winters</td>
+												<td th:text="${department.compCode}">Garrett Winters</td>
+												<td th:text="${department.depHead}">Garrett Winters</td>
+												<td th:text="${department.deptSrCode}">Garrett Winters</td>
+												
 
-												<td><span class="badge bg-success"
-													>Active</span></td>
-
-												<td><span> <a th:href="@{/openindent/edit/{id}(id=${indent.indentNumber})}">edit</a></span> <span> <a
-														th:href="@{/openindent/delete/{id}(id=${indent.indentNumber})}">delete</a></span></td>
+												<td><span> <a th:href="@{/department/edit/{id}(id=${department.deptCode})}">edit</a></span> <span> <a
+														th:href="@{/department/delete/{id}(id=${department.deptCode})}">delete</a></span></td>
 											</tr>
 
 
