--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -63,7 +63,7 @@
 						<label class="form-label">Employee Code</label> <label
 							style="color: red">*</label> <select class="form-control"
 							title="employee code" id="employee" required
-							onchange="indentGetEmployee()">
+							onchange="indentGetEmployee()" th:field="*{employee}">
 							<option value="">Select Employee</option>
 							<option th:each="employee :  ${employeeList}"
 								th:text="${employee.empCode}" th:value=" ${employee.empCode}"></option>
@@ -74,7 +74,7 @@
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Employee Name</label> <input type="text"
 							class="form-control" id="employeename"
-							placeholder="employee name" th:field="*{authEmpCode}">
+							placeholder="employee name">
 					</div>
 					<div class="form-group col-md-4">
 						<label for="inputAddress">Department Code</label> <input
