--- a/src/main/resources/templates/layouts/view/viewOpenIndent.html
+++ b/src/main/resources/templates/layouts/view/viewOpenIndent.html
@@ -260,15 +260,13 @@
 
 
 			<div class="row" style="margin: 10px">
-				<input type="submit" value="Submit" class="btn btn-primary" /> <input type="reset" value="Reset"
-					class="btn btn-danger" />
+				<input type="submit" value="Back"  onclick='javascript:window.history.back()'
+									class="btn btn-danger" /> 
 			</div>
 
 		</form>
 
-		<div class="row text-right m-10">
-			<a th:href="@{/openindent/list}">view open indent list</a>
-		</div>
+		
 	</div>
 
 
